force-app/main/default/objects/Case/fields/ArchieveCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchieveCreatedDate__c</fullName>
    <label>Archieve Created Date</label>
    <type>DateTime</type>
</CustomField>