force-app/main/default/objects/Case/fields/ArchieveLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchieveLastModifiedDate__c</fullName>
    <label>Archieve Last Modified Date</label>
    <type>DateTime</type>
</CustomField>