force-app/main/default/objects/Case/fields/ArchiveAttachment__c.field-meta.xml
<CustomField>
    <fullName>ArchiveAttachment__c</fullName>
    <label>Archive Attachment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>