force-app/main/default/objects/Case/fields/ArchiveCaseCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>ArchiveCaseCreatedBy__c</fullName>
    <label>Archive Case Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>