force-app/main/default/objects/Case/fields/ArchiveCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveCreatedDate__c</fullName>
    <label>Archive Created Date</label>
    <type>DateTime</type>
</CustomField>