force-app/main/default/objects/Case/fields/ArchiveInteractionId__c.field-meta.xml
<CustomField>
    <fullName>ArchiveInteractionId__c</fullName>
    <label>Archive Interaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>