force-app/main/default/objects/Case/fields/ArchiveLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveLastModifiedDate__c</fullName>
    <label>Archive Last Modified Date</label>
    <type>DateTime</type>
</CustomField>