force-app/main/default/objects/Case/fields/ArchiveLastUpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>ArchiveLastUpdatedBy__c</fullName>
    <label>Archive Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>