force-app/main/default/objects/Case/fields/ArchiveMigrationSource__c.field-meta.xml
<CustomField>
    <fullName>ArchiveMigrationSource__c</fullName>
    <label>Archive Migration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>