force-app/main/default/objects/Case/fields/ArchiveSelectedAddress__c.field-meta.xml
<CustomField>
    <fullName>ArchiveSelectedAddress__c</fullName>
    <label>Archive Selected Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>