force-app/main/default/objects/Case/fields/ArchiveServiceCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>ArchiveServiceCaseOwner__c</fullName>
    <label>Archive Service Case Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>