force-app/main/default/objects/Case/fields/ArchiveStatus__c.field-meta.xml
<CustomField>
    <fullName>ArchiveStatus__c</fullName>
    <label>Archive Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>