force-app/main/default/objects/Case/fields/FEC_Account_Contract_Number_PL__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Contract_Number_PL__c</fullName>
    <description>Trường thông tin hiển thị loại Account/Contract trên case của Non - Existing Customer</description>
    <label>Account/ Contract Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FEC_Customer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Existing Customer</fullName>
            </value>
            <value>
                <fullName>Ubank</fullName>
            </value>
            <value>
                <fullName>Internal Request</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>Cash24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>