force-app/main/default/objects/Case/fields/FEC_Account_Contract_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Contract_Number_Text__c</fullName>
    <description>Trường thông tin để hiển thị số tài khoản và số hợp đồng liên quan đến Case và Interaction</description>
    <formula>IF(
    ISBLANK(FEC_Account_or_Contract__c),
    &quot;&quot;,
    IF(
        LEFT(FEC_Account_or_Contract__r.Name, 15) = LEFT(FEC_Account_or_Contract__c, 15), 
        &quot;&quot;, 
        FEC_Account_or_Contract__r.Name
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account/ Contract Number</label>
    <type>Text</type>
</CustomField>