force-app/main/default/objects/Case/fields/FEC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>