force-app/main/default/objects/Case/fields/FEC_Account_or_Contract__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_or_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account/ Contract Number</label>
    <referenceTo>FEC_Customer_History__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>