force-app/main/default/objects/Case/fields/FEC_Actions_Taken_D2C_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Actions_Taken_D2C_Assessment__c</fullName>
    <description>Hành động đã thực hiện</description>
    <label>Actions Taken for D2C Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Corrective_Action</valueSetName>
    </valueSet>
</CustomField>