force-app/main/default/objects/Case/fields/FEC_Actual_Nature_of_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Actual_Nature_of_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bộ Actual NOC gán với Case</description>
    <label>Actual Nature of Case</label>
    <referenceTo>FEC_Actual_Nature_of_Case__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>