force-app/main/default/objects/Case/fields/FEC_Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Adjusted_Amount__c</fullName>
    <description>Người dùng nhập số tiền cần điều chỉnh</description>
    <label>Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>