force-app/main/default/objects/Case/fields/FEC_Archive_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>FEC_Archive_Sent_At__c</fullName>
    <label>Archive Sent At</label>
    <type>DateTime</type>    
</CustomField>