force-app/main/default/objects/Case/fields/FEC_Archive_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Archive_Status__c</fullName>
    <label>Archive Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>