force-app/main/default/objects/Case/fields/FEC_Assignment_Manager_ID_List_2__c.field-meta.xml
<CustomField xmlns=http://soap.sforce.com/2006/04/metadata>
    <fullName>FEC_Assignment_Manager_ID_List_2__c</fullName>
    <label>Assignment Manager ID List 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>