force-app/main/default/objects/Case/fields/FEC_Assignment_Manager_ID_List__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Manager_ID_List__c</fullName>
    <label>Assignment Manager ID List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>