force-app/main/default/objects/Case/fields/FEC_Assignment_Users__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Users__c</fullName>
    <description>Lưu trữ các giá trị assignment owner khi tạo và thay đổi assignment</description>
    <label>Assignment Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>