force-app/main/default/objects/Case/fields/FEC_Auto_Hold_Case_Result__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auto_Hold_Case_Result__c</fullName>
    <description>Auto Hold Case outcome after Mark NFU API (ALREADY_MARKED, SUCCESS, ERROR, PENDING).</description>
    <label>Auto Hold Case Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>ALREADY_MARKED</fullName>
                <label>Already Marked</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>