force-app/main/default/objects/Case/fields/FEC_Bank_Branch_Name_Noaccent__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Branch_Name_Noaccent__c</fullName>
    <description>Tên chi nhánh ngân hàng</description>
    <label>Bank Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>