force-app/main/default/objects/Case/fields/FEC_Bank_Name_Noaccent__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Name_Noaccent__c</fullName>
    <description>Tên ngân hàng</description>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>