force-app/main/default/objects/Case/fields/FEC_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Beneficiary_Name__c</fullName>
    <description>Tên người thụ hưởng</description>
    <label>Beneficiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>