force-app/main/default/objects/Case/fields/FEC_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bill_Amount__c</fullName>
    <description>Tự động điền Payment Amount của giao dịch được chọn và User không thể điều chỉnh.</description>
    <label>Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>