force-app/main/default/objects/Case/fields/FEC_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bill_Date__c</fullName>
    <description>Tự động điền Payment Date của giao dịch được chọn và User không thể điều chỉnh.</description>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>