force-app/main/default/objects/Case/fields/FEC_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>FEC_Business_Process__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>