force-app/main/default/objects/Case/fields/FEC_Can_Execute_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Can_Execute_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Xác định việc hiển thị nút &quot;Execute Assignment&quot; cho user hiện tại trên Case.

Field này được hệ thống tính toán tự động, dùng để kiểm tra user hiện tại có đủ điều kiện thực hiện xử lý Assignment hay không.

Field = TRUE khi thỏa TẤT CẢ điều kiện:

1. Case có ít nhất 1 Assignment:
   - FEC_Assignment_Count__c &gt;= 1

2. Tồn tại ít nhất 1 Assignment thỏa:
   - Owner = User hiện tại
   - Status KHÔNG thuộc các giá trị:
     • Completed
     • Resolved
     • AutoRecalled
     • AutoCompleted

Nếu không có Assignment nào thỏa điều kiện trên → field = FALSE

Mục đích sử dụng:
- Điều khiển hiển thị button &quot;Execute Assignment&quot; thông qua Dynamic Actions
- Đảm bảo chỉ user được phân công mới có thể thực hiện Assignment

Ghi chú:
- Field được cập nhật tự động bằng logic hệ thống (Apex/LWC), không chỉnh tay
- Áp dụng trên toàn bộ Assignment liên quan đến Case
- Phản ánh trạng thái đủ điều kiện thực thi theo thời gian thực của user</description>
    <label>Can Execute Assignment</label>
    <type>Checkbox</type>
</CustomField>