force-app/main/default/objects/Case/fields/FEC_Card_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Block_Reason__c</fullName>
    <description>Hiển thị lý do khách hàng muốn khoá thẻ</description>
    <label>Card Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporarily Locked</fullName>
            </value>
            <value>
                <fullName>Not In Use</fullName>
            </value>
            <value>
                <fullName>Lost/Stolen Card with Transaction Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>