force-app/main/default/objects/Case/fields/FEC_Card_Block_Service_Attempts__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Block_Service_Attempts__c</fullName>
    <description>Count of failed Block Card service calls for RC16.01 retry (max 3).</description>
    <label>Card Block Service Attempts</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>