force-app/main/default/objects/Case/fields/FEC_Card_Replacement_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Replacement_Fee__c</fullName>
    <description>Trường xác định phí thay thế thẻ phải thu từ khách hàng ứng</description>
    <label>Card Replacement Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>