force-app/main/default/objects/Case/fields/FEC_Card_Replacement_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Replacement_Reason__c</fullName>
    <description>Lý do khách hàng muốn thay thế thẻ</description>
    <label>Card Replacement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bị hư hỏng</fullName>
            </value>
            <value>
                <fullName>Bị mất/ đánh cắp</fullName>
            </value>
            <value>
                <fullName>Bị nuốt tại ATM</fullName>
            </value>
            <value>
                <fullName>Chưa nhận được thẻ</fullName>
            </value>
            <value>
                <fullName>Liên quan gian lận</fullName>
            </value>
            <value>
                <fullName>Không còn nguyên vẹn</fullName>
            </value>
            <value>
                <fullName>Sai tên in nổi</fullName>
            </value>
            <value>
                <fullName>Thay thế lần đầu thẻ Money Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>