force-app/main/default/objects/Case/fields/FEC_Case_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Channel__c</fullName>
    <description>Kênh trên Case</description>
    <label>Case Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>