force-app/main/default/objects/Case/fields/FEC_Case_Created_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Created_On__c</fullName>
    <description>Hiển thị ngày giờ tạo Case
Trường tạo mới để hiển thị trên Case details và interaction details do trường standard không hiển thị được đúng  yêu cầu</description>
    <formula>IF(NOT(ISBLANK(ArchiveCreatedDate__c)), ArchiveCreatedDate__c,
IF( OR(
        RecordType.DeveloperName = &quot;Customer_Case&quot;,
        RecordType.DeveloperName = &quot;Internal_Case&quot;
    ),
    CreatedDate,
    NULL)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Created On</label>
    <type>DateTime</type>
</CustomField>