force-app/main/default/objects/Case/fields/FEC_Case_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Email__c</fullName>
    <description>Trường tạo để User nhập thông tin email khách hàng với kh mới non-existing trên Case</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>