force-app/main/default/objects/Case/fields/FEC_Case_Executor__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Executor__c</fullName>
    <label>Case Executor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>