force-app/main/default/objects/Case/fields/FEC_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_ID__c</fullName>
    <formula>IF(
    OR(
        RecordType.Name = 'Customer Case',
        RecordType.Name = 'Internal Case',
        RecordType.Name = 'SFT Case'
    ),
    HYPERLINK("/" &amp; Id, FEC_ID_Search__c, "_self"),
    ''
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>