force-app/main/default/objects/Case/fields/FEC_Case_ID_Report__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_ID_Report__c</fullName>
    <description>Trường Case ID phục vụ cho report (không phải dạng hyperlink)</description>
    <formula>IF( Or(RecordType.Name = &apos;Customer Case&apos;, RecordType.Name = &apos;Internal Case&apos;), FEC_ID_Search__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID (Report)</label>
    <type>Text</type>
</CustomField>