force-app/main/default/objects/Case/fields/FEC_Case_Participants__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Participants__c</fullName>
    <description>Danh sách ID của User đã tham gia sử lý Case</description>
    <label>Case Participants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>