force-app/main/default/objects/Case/fields/FEC_Case_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Phone_Number__c</fullName>
    <description>Số điện thoại User nhập trên Case trong trường hợp Kh là non existing</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>