force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_By_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_By_3__c</fullName>
    <label>Case Remarks Entered By 3</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>