force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_By__c</fullName>
    <description>Lịch sử Email của User thực hiện nhập Case Remarks (rollup từ FEC_Case_Remarks__c).</description>
    <label>Case Remarks Entered By</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>