force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_By_Role_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_By_Role_1__c</fullName>
    <label>Case Remarks Entered By Role 1</label>
    <type>TextArea</type>
</CustomField>