force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_By_Role_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_By_Role_3__c</fullName>
    <label>Case Remarks Entered By Role 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>