force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_By_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_By_Role__c</fullName>
    <description>Lịch sử Role hệ thống của User khi nhập Case Remarks (rollup từ FEC_User_Role__c trên remark).</description>
    <label>Case Remarks Entered By Role</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>