force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_On_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_On_1__c</fullName>
    <label>Case Remarks Entered On 1</label>
    <type>TextArea</type>
</CustomField>