force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_On_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_On_2__c</fullName>
    <label>Case Remarks Entered On 2</label>
    <type>TextArea</type>
</CustomField>