force-app/main/default/objects/Case/fields/FEC_Case_Remarks_Entered_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks_Entered_On__c</fullName>
    <description>Lịch sử thời điểm nhập Case Remarks (rollup từ CreatedDate trên remark).</description>
    <label>Case Remarks Entered On</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>