force-app/main/default/objects/Case/fields/FEC_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Status__c</fullName>
    <description>Trạng thái cuối hiển thị trên Case bao gồm  thông  tin đơn vị đang pending case với các case pending</description>
    <label>Case Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>