force-app/main/default/objects/Case/fields/FEC_Case_Status_History_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Status_History_3__c</fullName>
    <label>Case Status History 3</label>
    <type>TextArea</type>
</CustomField>