force-app/main/default/objects/Case/fields/FEC_Case_Status_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Status_History__c</fullName>
    <description>Lich su cap nhat trang thai cua Case theo dinh dang #n: status.</description>
    <label>Case Status History</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>