force-app/main/default/objects/Case/fields/FEC_Category__c.field-meta.xml
<CustomField>
    <fullName>FEC_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin danh mục</description>
    <label>Category</label>
    <referenceTo>FEC_Category__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>