force-app/main/default/objects/Case/fields/FEC_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>FEC_Category_Text__c</fullName>
    <description>Hiển thị thông Category dưới dạng Text</description>
    <formula>FEC_Category__r.Name</formula>
    <label>Category (Text)</label>
    <type>Text</type>
</CustomField>