force-app/main/default/objects/Case/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>