force-app/main/default/objects/Case/fields/FEC_Chat_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Chat_History__c</fullName>
    <label>Chat History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>