force-app/main/default/objects/Case/fields/FEC_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_CIF_Number__c</fullName>
    <description>Mã Cif của Kh (sau khi chọn sp thì hệ thống tự động cập nhật)</description>
    <label>CIF Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>