force-app/main/default/objects/Case/fields/FEC_CL_TAT_Export_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_CL_TAT_Export_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TH2: Case không có Assignment — true khi tồn tại ít nhất một Routing Action History có Queue/User thuộc team Collections (CL).</description>
    <label>CL TAT Export Case</label>
    <type>Checkbox</type>
</CustomField>