force-app/main/default/objects/Case/fields/FEC_CMS_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_CMS_Phone__c</fullName>
    <description>Dữ liệu được trả về từ API 56. GetRewardEligibility</description>
    <label>CMS Phone</label>
    <type>Phone</type>
</CustomField>