force-app/main/default/objects/Case/fields/FEC_Coll_Action_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Coll_Action_Code__c</fullName>
    <label>Coll Action Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>