force-app/main/default/objects/Case/fields/FEC_Coll_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Coll_Action_Date__c</fullName>
    <label>Coll Action Date</label>
    <type>DateTime</type>
</CustomField>