force-app/main/default/objects/Case/fields/FEC_Coll_Agent__c.field-meta.xml
<CustomField>
    <fullName>FEC_Coll_Agent__c</fullName>
    <label>Coll Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>