force-app/main/default/objects/Case/fields/FEC_Coll_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FEC_Coll_Remarks__c</fullName>
    <label>Coll Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>