force-app/main/default/objects/Case/fields/FEC_Collections_Response__c.field-meta.xml
<CustomField>
    <fullName>FEC_Collections_Response__c</fullName>
    <label>Collections Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>