force-app/main/default/objects/Case/fields/FEC_Complain_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complain_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>High risk</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>false</isActive>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>false</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>