force-app/main/default/objects/Case/fields/FEC_Complaint_Source__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Source__c</fullName>
    <inlineHelpText>SBV: Ngân hàng Nhà nước Việt Nam
CIC: Trung tâm Thông tin Tín dụng
VCCA: Cục Canh tranh và Bảo vệ người tiêu dùng
PR/ MKT: Trung tâm Truyền thông và Tiếp thị
VIP: Các quản lý cấp cao
EA: Bộ phận Quan Hệ Đối Ngoại
Others: Những nguồn khác</inlineHelpText>
    <label>Complaint Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBV</fullName>
            </value>
            <value>
                <fullName>CIC</fullName>
            </value>
            <value>
                <fullName>VCCA</fullName>
            </value>
            <value>
                <fullName>PR/MKT</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>